<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/alertsHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alertsHeadline"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:textColor="@color/headlinesColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/lineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line_horizontal"
        android:layout_marginTop="7dp"
        android:layout_below="@id/alertsHeadline"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageAlerts"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/lineHorizontal"
        android:background="@drawable/image_alerts" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_navigation">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/backgroundColoredButtons">

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/accountingButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/accountingButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"
                    />

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/personnelButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:text="@string/personnelButton"
                    android:textColor="@color/whiteColor" />

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/economicsButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/economicsButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/financeButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/financeButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/marketingButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/marketingButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/taxesButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/taxesButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/secretariatButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/secretariatButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lawButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/lawButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/itButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/itButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/smmButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/smmButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"/>

            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/colorPrimaryDark"
        app:itemTextColor="@color/colorPrimaryDark"
        app:menu="@menu/menu_bottom_navigation"
        />

</RelativeLayout>