<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChatMessagingActivity">

    <TextView
        android:id="@+id/chatHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chatHeadline"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:textColor="@color/headlinesColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/lineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line_horizontal"
        android:layout_marginTop="7dp"
        android:layout_below="@id/chatHeadline"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageChatting"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/lineHorizontal"
        android:background="@drawable/image_chatting" />

    <RelativeLayout
        android:id="@+id/newRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/scrollView"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

    <EditText
        android:id="@+id/chatMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:background="@drawable/custom_chat_message"
        />

        <ImageButton
            android:id="@+id/messageSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/image_message_send"
            />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_navigation">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/backgroundColoredButtons">

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/accountingButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/accountingButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"
                    />

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/personnelButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:text="@string/personnelButton"
                    android:textColor="@color/whiteColor" />

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/economicsButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/economicsButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/financeButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/financeButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/marketingButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/marketingButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/taxesButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/taxesButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/secretariatButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/secretariatButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lawButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/lawButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/itButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/itButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/smmButton"
                    android:textColor="@color/whiteColor"
                    android:background="@color/smmButtonColor"
                    android:fontFamily="@font/roboto_condensed_regular"/>

            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/bottom_navigation_item_background_colors"
        app:itemTextColor="@color/bottom_navigation_item_background_colors"
        app:menu="@menu/menu_bottom_navigation"
        />


</RelativeLayout>